# upolygon-rs

./: .gitignore  Cargo.toml  benchmarks.py  pyproject.toml  test.py
.github/workflows/: CI.yml
python-tests/: test_polygons.py  test_rle.py
src/: contours.rs  geometry.rs  lib.rs  polygons.rs  rle.rs
