[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "upolygon-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "upolygon-rs"
version = "0.1.0"
description = ""
authors = ["Nathan Perkins <nathanjp91@gmail.com>"]
readme = "README.md"
packages = [{include = "upolygon_rs"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.2"
numpy = "^1.24.3"
upolygon = "^0.1.10"
seaborn = "^0.12.2"
pandas = "^2.0.2"
cython = "^0.29.35"

